# ReSurfEMG

./: .buildinfo  .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  developers.html  genindex.html  index.html  medical-professionals.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  resurfemg.cli.cli.html  resurfemg.cli.html  resurfemg.data_connector.adicht_reader.html  resurfemg.data_connector.config.html  resurfemg.data_connector.converter_functions.html  resurfemg.data_connector.data_classes.html  resurfemg.data_connector.file_discovery.html  resurfemg.data_connector.html  resurfemg.data_connector.peakset_class.html  resurfemg.data_connector.synthetic_data.html  resurfemg.data_connector.tmsisdk_lite.html  resurfemg.helper_functions.data_classes_quality_assessment.html  resurfemg.helper_functions.html  resurfemg.helper_functions.math_operations.html  resurfemg.helper_functions.visualization.html  resurfemg.html  resurfemg.pipelines.html  resurfemg.pipelines.ipy_widgets.html  resurfemg.pipelines.processing.html  resurfemg.pipelines.synthetic_data.html  resurfemg.postprocessing.baseline.html  resurfemg.postprocessing.event_detection.html  resurfemg.postprocessing.features.html  resurfemg.postprocessing.html  resurfemg.postprocessing.quality_assessment.html  (+7 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  🐛-bug-report.md
.github/workflows/: codeql.yml  on-commit.yml  on-tag.yml  on_pr_main.yml  scorecard.yml
docs/: conf.py
notebooks/dev/debugging/: config_routing.ipynb  gating_adjacent_peaks_example.ipynb  numpy_sim_differences.ipynb  rms_centralisation_example.ipynb  test_config.py
notebooks/dev/feature_development/: adicht_reader.ipynb  aub_test.ipynb  bell_fit.ipynb  bell_fit_example.ipynb  envelope_error_bars.ipynb  file_discovery.ipynb  file_discovery_loading.ipynb  gating_example.ipynb  gating_np_interpolation.ipynb  gating_np_interpolation_etp_effects.ipynb  gating_pipeline.ipynb  pipeline_structure.ipynb  plotting_library.ipynb  pocc_quality.ipynb  pocc_quality_test.ipynb  pseudo_snr.ipynb  rms_arv_example.ipynb  wavelet_denoising.ipynb
notebooks/open_work/: entropy_breath_detection_new_top_curve.ipynb  entropy_cycler_on_offset_detection.ipynb  entropy_eline_near_final.ipynb  entropy_widgeted_updated_june.ipynb  explore_tf_EMGdi_spectrum.ipynb  ica_comparison.ipynb  ica_ecg_subtraction.ipynb  ica_methods.ipynb  ica_various_examples.ipynb  ica_why_n_ICA_is_bad.ipynb  information_loss_widgeted_seconds.ipynb  lag_lead_match.ipynb  lag_lead_match_upsample.ipynb
notebooks/researcher_interface/: basic_emg_pipeline.ipynb  basic_emg_pipeline_annotated.ipynb  pipeline_with_widgets.ipynb  quick_look.ipynb  software_paper.ipynb  synthetic_data_generation.ipynb
notebooks/researcher_interface/publication_2024_neuromuscular_coupling/: neuromuscular_coupling_quality_assessment_for_pub.ipynb  neuromuscular_coupling_quality_assessment_for_pub_synthetic_data.ipynb  neuromuscular_coupling_quality_assessment_for_pub_workflow.ipynb  (+1 more)
resurfemg/: __init__.py  __main__.py
resurfemg/cli/: __init__.py  cli.py
resurfemg/data_connector/: __init__.py  adicht_reader.py  config.py  converter_functions.py  data_classes.py  file_discovery.py  peakset_class.py  synthetic_data.py  tmsisdk_lite.py
resurfemg/helper_functions/: __init__.py  data_classes_quality_assessment.py  math_operations.py  visualization.py
resurfemg/legacy/: entropy.py
resurfemg/modelling/: __init__.py
resurfemg/pipelines/: __init__.py  ipy_widgets.py  processing.py  synthetic_data.py
resurfemg/postprocessing/: __init__.py  baseline.py  event_detection.py  features.py  quality_assessment.py
resurfemg/preprocessing/: __init__.py  ecg_removal.py  envelope.py  filtering.py  pneumatic.py
tests/: linting_test.py
tests/data_connector_tests/: config_test.py  converter_functions_test.py  data_classes_test.py  file_discovery_test.py  synthetic_data_test.py
tests/helper_functions_tests/: converter_test.py  math_operations_test.py  visualization_test.py
tests/pipelines_tests/: ipy_widgets_test.py  preprocessing_pipeline_test.py  synthetic_data_pipeline_test.py
tests/postprocessing_tests/: baseline_test.py  event_detection_test.py  features_test.py  quality_assessment_test.py
tests/preprocessing_tests/: ecg_removal_test.py  envelope_test.py  filtering_test.py
(+12 files in other folders)
